# cp_models

./: .gitignore  README.md  pyproject.toml
cp_models/: __init__.py
cp_models/classification/: __init__.py
cp_models/regression/: __init__.py  split_conformal_regressor.py
cp_models/scores/: absolute_score.py
cp_models/utils/: __init__.py
notebooks/: clasification_dress.ipynb
src/cp_models/: __init__.py
src/cp_models/classification/: __init__.py  split_conformal.py
src/cp_models/metrics/: __init__.py
src/cp_models/models/: __init__.py
src/cp_models/models/cnn/: __init__.py  simple_cnn.py
src/cp_models/models/mlp/: __init__.py  mlp_classifier.py
src/cp_models/models/utils/: __init__.py  predict.py  train.py  utils.py
src/cp_models/scores/: __init__.py  squared_score.py
