[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cp_models"
version = "0.1.0"
description = "Conformal prediction models"
authors = [{name = "Brian Fuentes"}]
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cp_models*"]